--- a/assets/style.css
+++ b/assets/style.css
@@ -277,6 +277,11 @@ footer{
         max-width: 280px;
 
     }
+    
+    .ctn form a{
+        min-width: 280px;  
+    }
+    
 
     .ctn form .entrar{
         max-width: 280px;
